# PacMan-VSB

./: CMakeLists.txt  README.md  game_menu  main.c  pacman_game
config/: config.h
entities/: entities.c  entities.h
font/: info.txt
game/: coins.c  coins.h  core.c  core.h  field.c  field.h  fruit.c  fruit.h  game.h  ghostsAI.c  ghostsAI.h  pacmanAI.c  pacmanAI.h  points.c  points.h  wallChecker.c  wallChecker.h
game/AI/bfs/: bfs.c  bfs.h
menu/: loadScore.c  loadScore.h  menu.c  menu.h  sound.c  sound.h
